2006-04-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/audiotestsrc/gstaudiotestsrc.c:
	  Fixed the sample pipeline (see #323798)

2006-04-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* win32/common/config.h:
	* win32/common/config.h.in:
	  use AS_VERSION and AS_NANO
	  more cleanups

2006-03-31  Andy Wingo  <wingo@pobox.com>

	* ext/vorbis/vorbisparse.c (vorbis_parse_sink_event): Fix
	uninitialized variable return that would happen.
	
	* ext/vorbis/vorbisparse.c (vorbis_parse_drain_queue): Fix
	uninitialized variable return that would never happen.

	* ext/vorbis/vorbisparse.c (gst_vorbis_parse_init) 
	(vorbis_parse_sink_event): Add an event function to flush our
	state on a seek, and to drain buffers on a premature EOS.
	(vorbis_parse_push_headers, vorbis_parse_clear_queue) 
	(vorbis_parse_push_buffer, vorbis_parse_drain_queue_prematurely) 
	(vorbis_parse_chain, vorbis_parse_queue_buffer) 
	(vorbis_parse_drain_queue): Queue up buffers until we can set
	their timestamps and granulepos values.

	* ext/vorbis/vorbisparse.h: Include the vorbis decoder headers,
	and keep track of data needed for deriving granulepos and
	timestamps for buffers.

2006-03-29  Wim Taymans  <wim@fluendo.com>

	Patch by: j^ <j at bootlab dot org>

	* ext/alsa/gstalsamixerelement.c:
	(gst_alsa_mixer_element_class_init):
	* ext/alsa/gstalsasink.c:
	* ext/alsa/gstalsasrc.c: (gst_alsasrc_class_init):
	* ext/ogg/gstoggdemux.c:
	* ext/ogg/gstoggmux.c:
	* ext/ogg/gstoggparse.c:
	* ext/pango/gstclockoverlay.c:
	* ext/pango/gsttextoverlay.c:
	* ext/pango/gsttextrender.c:
	* ext/pango/gsttimeoverlay.c:
	* ext/theora/theoradec.c:
	* ext/theora/theoraenc.c:
	* ext/vorbis/vorbisdec.c:
	* ext/vorbis/vorbisenc.c:
	* gst/audioconvert/gstaudioconvert.c:
	* gst/subparse/gstsubparse.c:
	* gst/tcp/gstmultifdsink.c:
	* gst/tcp/gsttcpclientsink.c:
	* gst/tcp/gsttcpclientsrc.c:
	* gst/tcp/gsttcpserversink.c:
	* gst/tcp/gsttcpserversrc.c: